Fix table overflow on narrow screens

--- a/static/style.css
+++ b/static/style.css
@@ -85,3 +85,7 @@ table tr:last-child td {
 tr:nth-child(even) {
     background-color: #353535;
 }
+
+div.table-wrapper {
+    overflow-x: auto;
+}
